141887 Make PlatformConfiguration work against non running instance